k8s/mysql-deployment.yaml
# k8s/mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
        - name: mysql
          image: mysql:8.0
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: init-scripts
              mountPath: /docker-entrypoint-initdb.d  # Mount the init.sql here
      volumes:
        - name: init-scripts
          configMap:
            name: mysql-init-scripts  # Refers to the ConfigMap that contains the init.sql
